# Arena

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md
.github/workflows/: ci.yml
bench/: CMakeLists.txt  arena_bench.cc
include/arena/: align.hpp  arena.hpp  arenahelper.hpp  memory.hpp  metrics.hpp
src/: CMakeLists.txt  arena.cc  arena.cppm  metrics.cc
tests/: CMakeLists.txt  arena_test.cc  memory_test.cc  metrics_test.cc
