#[[
 Copyright (C) 2020 hurricane <l@stdb.io>. All rights reserved.
 +------------------------------------------------------------------------------+
 |                                                                              |
 |                                                                              |
 |                    ..######..########.########..########.                    |
 |                    .##....##....##....##.....##.##.....##                    |
 |                    .##..........##....##.....##.##.....##                    |
 |                    ..######.....##....##.....##.########.                    |
 |                    .......##....##....##.....##.##.....##                    |
 |                    .##....##....##....##.....##.##.....##                    |
 |                    ..######.....##....########..########.                    |
 |                                                                              |
 |                                                                              |
 |                                                                              |
 +------------------------------------------------------------------------------+
]]

aux_source_directory(. ARENA_SRC)
add_library(arena ${ARENA_SRC})
target_compile_options(arena PRIVATE -frtti)
target_link_libraries(arena)

